Finished Basic Setup for portfolio homework.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
         <title>Basic HTML Bio</title>
     </head>
     <body>
-        
+        <header>
+            <h1>Basic HTML Bio</h1>
+        </header>
+        <div>
+            <section>
+                <h2>Kristian</h2>
+                <img src="https://img.apmcdn.org/fd3a545502114a88604cd9a271f7a32964662ff2/uncropped/2b1fc8-20180725-impossible-burger.jpg" width="200" height="200" alt="This was a placeholder image">
+                <p>
+                    Write a little about yourself. <a href="https://github.com/kneely13/demo-repo.git"></a>
+                </p>
+            </section>
+            <section>
+                <h2>Contact</h2>
+
+                <ul>
+                    <li>
+                        <strong>Email:</strong><a href="mailto:kneely13@students.ndc.edu">kneely13@students.ndc.edu</a>
+                    </li>
+                    <li><string>Portfolio:</string> Coming Soon</li>
+                </ul>
+            </section>
+        </div>
     </body>
 </html>
