Updated HTML Bio template with CSS included

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <style>
+        h1{
+           text-align: center;
+        }
+
+        h2{
+            text-align: left;
+            padding: 50px;
+            margin-top: 50px;
+        }
+        .contact{
+            text-align: right;
+        }
+        
+
+
+    </style>
     <head>
         <meta charset="UTF-8">
         <title>Basic HTML Bio</title>
     </head>
     <body>
-        <header>
+        <header class="head">
             <h1>Basic HTML Bio</h1>
         </header>
         <div>
@@ -16,14 +33,14 @@
                     Write a little about yourself. <a href="https://github.com/kneely13/demo-repo.git"></a>
                 </p>
             </section>
-            <section>
+            <section class="contact">
                 <h2>Contact</h2>
 
                 <ul>
                     <li>
                         <strong>Email:</strong><a href="mailto:kneely13@students.ndc.edu">kneely13@students.ndc.edu</a>
                     </li>
-                    <li><string>Portfolio:</string> Coming Soon</li>
+                    <li><strong>Portfolio:</strong> Coming Soon</li>
                 </ul>
             </section>
         </div>
